--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<meta name="Description" content=""/>
 	<meta name="keywords" content=""/>
-	<title>Ğ¤½¿ÑŞ µÄÎ¢ÃûÆ¬</title>
+	<title>é™ˆæŸ³åœ¨ çš„å¾®åç‰‡</title>
     <!--<link rel="stylesheet" type="text/css" href="/themes/default/public/css/mui.min.css">
 <link rel="stylesheet" type="text/css" href="/themes/default/public/css/reset.css">
 <link rel="stylesheet" type="text/css" href="/themes/default/public/css/style.css">
@@ -24,42 +24,42 @@
 	<div class="card-wrap">
 		<img class="bg-mark" src="/themes/default/public/img/card/bg-mark.png"/>
 		<div class="card-cont">
-			<h2 class="card-name">³ÂÁøÔÚ <span>¸±×Ü</span></h2>
-			<p class="card-company">ÉîÛÚÊĞÉÇÎ²Ê³Æ·ÓĞÏŞ¹«Ë¾</p>
+			<h2 class="card-name">é™ˆæŸ³åœ¨ <span>å‰¯æ€»</span></h2>
+			<p class="card-company">æ·±åœ³å¸‚æ±•å°¾é£Ÿå“æœ‰é™å…¬å¸</p>
 			<ul class="info-list">
 				<li>
-					<img class="list-icon" src="/themes/default/public/img/card/icon-tel.png"/> µç»°£º13682605277				</li>
+					<img class="list-icon" src="/themes/default/public/img/card/icon-tel.png"/> ç”µè¯ï¼š13682605277				</li>
 				<li>
-					<img class="list-icon" src="/themes/default/public/img/card/icon-phone.png"/> ×ù»ú£º27069902				</li>
+					<img class="list-icon" src="/themes/default/public/img/card/icon-phone.png"/> åº§æœºï¼š27069902				</li>
 				<li>
-					<img class="list-icon" src="/themes/default/public/img/card/icon-email.png"/> ÓÊÏä£º425929886@qq.com				</li>
+					<img class="list-icon" src="/themes/default/public/img/card/icon-email.png"/> é‚®ç®±ï¼š425929886@qq.com				</li>
 				<li>
-					<img class="list-icon" src="/themes/default/public/img/card/icon-place.png"/> µØÖ·£ºÉîÛÚÊĞ±¦°²ÇøËÉ¸Ú½ÖµÀÌ¶Í·Î÷²¿¹¤ÒµÇø52-53¶°				</li>
+					<img class="list-icon" src="/themes/default/public/img/card/icon-place.png"/> åœ°å€ï¼šæ·±åœ³å¸‚å®å®‰åŒºæ¾å²—è¡—é“æ½­å¤´è¥¿éƒ¨å·¥ä¸šåŒº52-53æ ‹				</li>
 			</ul>
 			<img class="icon-arrow" src="/themes/default/public/img/card/icon-arrow.png"/>
 			<ul class="icon-list clear">
 				                    <li>
 											<a href="/portal/index/some/nid/1.html">
 							                        <img src="/themes/default/public/img/card/icon1.png"/>
-                        <span>ÈÙÓşÖ¤Êé</span>
+                        <span>è£èª‰è¯ä¹¦</span>
 					</a>
                     </li>
 				                    <li>
 															<a href="/portal/index/one/nid/2.html">
 											                        <img src="/themes/default/public/img/card/icon1.png"/>
-                        <span>ÕĞÆ¸º£±¨</span>
+                        <span>æ‹›è˜æµ·æŠ¥</span>
 					</a>
                     </li>
 				                    <li>
 																<a href="tel:13682605277">
 					                        <img src="/themes/default/public/img/card/icon1.png"/>
-                        <span>ÁªÏµÎÒÃÇ</span>
+                        <span>è”ç³»æˆ‘ä»¬</span>
 					</a>
                     </li>
 				                    <li>
 												<a href="/portal/index/one/nid/5.html">
 								                        <img src="/themes/default/public/img/card/icon1.png"/>
-                        <span>ÍÅ¶Ó·ç²É</span>
+                        <span>å›¢é˜Ÿé£é‡‡</span>
 					</a>
                     </li>
 							</ul>
@@ -70,7 +70,7 @@
 	<div class="banner"></div>
 
 
-    <!--µ×²¿µ¼º½-->
+    <!--åº•éƒ¨å¯¼èˆª-->
 	<div class="botnav-height"></div>
 	<div class="bot-nav clear">
 		<div class="bot-avatar">
@@ -78,26 +78,26 @@
 		</div>
 		<a href="tel:13682605277">
 			<img src="/themes/default/public/img/card/tab1.png"/>
-			<span>´òµç»°</span>
+			<span>æ‰“ç”µè¯</span>
 		</a>
 		<a href="sms:13682605277">
 			<img src="/themes/default/public/img/card/tab2.png"/>
-			<span>·¢¶ÌĞÅ</span>
+			<span>å‘çŸ­ä¿¡</span>
 		</a>
 		<a href="javascript:;" class="rc">
 			<img src="/themes/default/public/img/card/tab3.png"/>
-			<span>Ìí¼ÓÍ¨Ñ¶Â¼</span>
+			<span>æ·»åŠ é€šè®¯å½•</span>
 		</a>
 		<a target="_blank" href="">
 			<img src="/themes/default/public/img/card/tab4.png"/>
-			<span>ÉÌ³Ç</span>
+			<span>å•†åŸ</span>
 		</a>
 	</div>
-	<!--µ×²¿µ¼º½-end-->
+	<!--åº•éƒ¨å¯¼èˆª-end-->
 
 </div>
-<script type="text/javascript" src='/themes/default/public/js/mui.min.js'></script>
-<script type="text/javascript" src='/themes/default/public/js/jquery-2.1.4.min.js'></script>
+<script src="//dev.dcloud.net.cn/mui/dist/js/mui.min.js?v=2017-01-03 10:58:41 +0800"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 
 <script type="text/javascript">
@@ -124,7 +124,7 @@
     var i=0;
     $(window).scroll(function(){
         if($(window).scrollTop() >= 88 && i==0){
-            //Òì²½¼ÓÔØ
+            //å¼‚æ­¥åŠ è½½
             i++;
             $.post("/portal/index/getcontent.html",
                     {cid:1},
@@ -143,27 +143,27 @@
 </script>
 <script>
     //alert(location.href.split('#')[0]);
-    //ÅäÖÃÎ¢ĞÅĞÅÏ¢
+    //é…ç½®å¾®ä¿¡ä¿¡æ¯
     wx.config ({
-        debug : false,    // true:µ÷ÊÔÊ±ºòµ¯´°
+        debug : false,    // true:è°ƒè¯•æ—¶å€™å¼¹çª—
         appId: 'wx37cf65710b40eeeb',
         timestamp: '1566303803',
         nonceStr: 'wwchznBmm8sGuFL7',
         signature: 'e7d79659146d5d725382921f59bb01b9fb5b7d60' ,
         jsApiList : [
-            // ËùÓĞÒªµ÷ÓÃµÄ API ¶¼Òª¼Óµ½Õâ¸öÁĞ±íÖĞ
-            'onMenuShareTimeline',       // ·ÖÏíµ½ÅóÓÑÈ¦½Ó¿Ú
-            'onMenuShareAppMessage',  //  ·ÖÏíµ½ÅóÓÑ½Ó¿Ú
+            // æ‰€æœ‰è¦è°ƒç”¨çš„ API éƒ½è¦åŠ åˆ°è¿™ä¸ªåˆ—è¡¨ä¸­
+            'onMenuShareTimeline',       // åˆ†äº«åˆ°æœ‹å‹åœˆæ¥å£
+            'onMenuShareAppMessage',  //  åˆ†äº«åˆ°æœ‹å‹æ¥å£
         ]
     });
     wx.ready(function(){
-        //Ê¹ÓÃgetLocation½Ó¿Ú»ñÈ¡µØÀíÎ»ÖÃ×ø±ê
+        //ä½¿ç”¨getLocationæ¥å£è·å–åœ°ç†ä½ç½®åæ ‡
         wx.checkJsApi({
             jsApiList: [
             ],
             success: function (res) {
                 if (res.checkResult.getLocation == false) {
-                    alert('ÄãµÄÎ¢ĞÅ°æ±¾Ì«µÍ£¬²»Ö§³ÖÎ¢ĞÅJS½Ó¿Ú£¬ÇëÉı¼¶µ½×îĞÂµÄÎ¢ĞÅ°æ±¾£¡');
+                    alert('ä½ çš„å¾®ä¿¡ç‰ˆæœ¬å¤ªä½ï¼Œä¸æ”¯æŒå¾®ä¿¡JSæ¥å£ï¼Œè¯·å‡çº§åˆ°æœ€æ–°çš„å¾®ä¿¡ç‰ˆæœ¬ï¼');
                     return;
                 }
             }
@@ -171,18 +171,18 @@
 
         var domain = document.domain;
         wx.onMenuShareTimeline({
-            title: 'Ğ¤½¿ÑŞ µÄÎ¢ÃûÆ¬', // ·ÖÏí±êÌâ
+            title: 'è‚–å¨‡è‰³ çš„å¾®åç‰‡', // åˆ†äº«æ ‡é¢˜
             link:"http://"+domain+"/portal/index/index/u/"+2851,
-            imgUrl: "", // ·ÖÏíÍ¼±ê /statics/default/img/zt-2.png
+            imgUrl: "", // åˆ†äº«å›¾æ ‡ /statics/default/img/zt-2.png
 
         });
-        // »ñÈ¡¡°·ÖÏí¸øÅóÓÑ¡±°´Å¥µã»÷×´Ì¬¼°×Ô¶¨Òå·ÖÏíÄÚÈİ½Ó¿Ú
+        // è·å–â€œåˆ†äº«ç»™æœ‹å‹â€æŒ‰é’®ç‚¹å‡»çŠ¶æ€åŠè‡ªå®šä¹‰åˆ†äº«å†…å®¹æ¥å£
         wx.onMenuShareAppMessage({
-            title: 'Ğ¤½¿ÑŞ µÄÎ¢ÃûÆ¬', // ·ÖÏí±êÌâ
-            desc: "ÄãºÃ£¬ÕâÊÇÎÒµÄÎ¢ÃûÆ¬£¬¶à¶à¹ØÕÕ", // ·ÖÏíÃèÊö
+            title: 'è‚–å¨‡è‰³ çš„å¾®åç‰‡', // åˆ†äº«æ ‡é¢˜
+            desc: "ä½ å¥½ï¼Œè¿™æ˜¯æˆ‘çš„å¾®åç‰‡ï¼Œå¤šå¤šå…³ç…§", // åˆ†äº«æè¿°
             link:"http://"+domain+"/portal/index/index/u/"+2851,
-            imgUrl: "", // ·ÖÏíÍ¼±ê
-            type: 'link', // ·ÖÏíÀàĞÍ,music¡¢video»òlink£¬²»ÌîÄ¬ÈÏÎªlink
+            imgUrl: "", // åˆ†äº«å›¾æ ‡
+            type: 'link', // åˆ†äº«ç±»å‹,musicã€videoæˆ–linkï¼Œä¸å¡«é»˜è®¤ä¸ºlink
 
         });
     });
