--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<!--底部导航-end-->
 
 </div>
-<script src="//dev.dcloud.net.cn/mui/dist/js/mui.min.js?v=2017-01-03 10:58:41 +0800"></script>
+<script src="https://dev.dcloud.net.cn/mui/dist/js/mui.min.js?v=2017-01-03 10:58:41 +0800"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 
